--- a/instagram-web.css
+++ b/instagram-web.css
@@ -74,7 +74,16 @@ body{
 }
 .idpw_2{
     border: none;
-    width:94%;
+    width:96%;
+    outline: none;
+    background-color: rgb(250 250 250);
+    padding-top:9px;
+    padding-bottom:8px;
+    padding-left:7px;
+}
+.idpw_2_1{
+    border: none;
+    width:70%;
     outline: none;
     background-color: rgb(250 250 250);
     padding-top:9px;
@@ -220,6 +229,16 @@ option{
     margin-top: 8px;
     margin-bottom: 8px
 }
+.pw_vs{
+    border:0;
+    background-color: rgb(250 250 250);
+    width: 125px;
+}
+
+#pwvi:hover{
+    cursor: pointer;
+}
+
 
 @media (max-width:875px) {
     .left{
